--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<base href="/">
 
-	<title>Starter Node and Angular</title>
+	<title>Kaldi Web APP</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
@@ -16,14 +16,25 @@
 
 	<!-- ANGULAR CUSTOM -->
 	<script src="js/controllers/MainCtrl.js"></script>
-	<script src="js/controllers/NerdCtrl.js"></script>
-	<script src="js/services/NerdService.js"></script>
+	<script src="js/controllers/EnrollCtrl.js"></script>
+	<script src="js/services/EnrollService.js"></script>
+<!-- 	<script src="js/controllers/NerdCtrl.js"></script>
+	<script src="js/services/NerdService.js"></script> -->
 	<script src="js/controllers/GeekCtrl.js"></script>
 	<script src="js/services/GeekService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
+
+	<!-- Angular timer -->
+	<script src="libs/angular-timer/dist/angular-timer.min.js"></script>
+	<script src="libs/moment/min/moment.min.js"></script>
+	<script src="libs/moment/min/locales.min.js"></script>
+	<script src="libs/humanize-duration/humanize-duration.js"></script>
+<!-- 	<script type="text/javascript" src="js/recorder.js"></script>
+	<script type="text/javascript" src="js/resampler.js"></script> -->
+	
 </head>
-<body ng-app="sampleApp" ng-controller="NerdController">
+<body ng-app="kaldiWebApp">
 <div class="container">
 	
 	<!-- HEADER -->
@@ -32,8 +43,8 @@
 			<a class="navbar-brand" href="/">Kaldi web App</a>
 		</div>
 		<ul class="nav navbar-nav">
-			<li><a href="/nerds">Nerds</a></li>
-			<li><a href="/geeks">Geeks</a></li>
+			<li><a href="/enroll">Enrollment</a></li>
+			<li><a href="/geeks">Test and Score</a></li>
 		</ul>
 	</nav>
 
