--- a/public/index.html
+++ b/public/index.html
@@ -52,5 +52,9 @@
 	<div ng-view></div>
 
 </div>
+    <script src="js/recorder.js"> </script>
+    <script src="js/resampler.js"> </script>
+    <!-- <script src="js/recorderWorker.js"> </script> -->
+    <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
