--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 	<script src="js/services/EnrollService.js"></script>
 <!-- 	<script src="js/controllers/NerdCtrl.js"></script>
 	<script src="js/services/NerdService.js"></script> -->
-	<script src="js/controllers/GeekCtrl.js"></script>
-	<script src="js/services/GeekService.js"></script>
+	<script src="js/controllers/ScoreCtrl.js"></script>
+	<script src="js/services/ScoreService.js"></script>
 	<script src="js/appRoutes.js"></script>
 	<script src="js/app.js"></script>
 
@@ -44,7 +44,7 @@
 		</div>
 		<ul class="nav navbar-nav">
 			<li><a href="/enroll">Enrollment</a></li>
-			<li><a href="/geeks">Test and Score</a></li>
+			<li><a href="/score">Test and Score</a></li>
 		</ul>
 	</nav>
 
